@@ -1,7 +1,10 @@
 package org.jabref.model.entry;
 
 import java.util.Arrays;
+import java.util.Collection;
+import java.util.HashSet;
 import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.SequencedCollection;
 import java.util.SequencedSet;
 import java.util.Set;
@@ -16,12 +19,16 @@ import org.jabref.model.entry.types.EntryType;
 import org.jabref.model.entry.types.StandardEntryType;
 
 import com.google.common.collect.Streams;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class BibEntryTypeBuilder {
-
+    private static final Logger LOGGER = LoggerFactory.getLogger(BibEntryTypeBuilder.class);
+    private final SequencedSet<OrFields> requiredFields = new LinkedHashSet<>();
+    private final Set<Field> seenFields = new HashSet<>();
+    private SequencedSet<BibField> optionalFields = new LinkedHashSet<>();
     private EntryType type = StandardEntryType.Misc;
-    private SequencedSet<BibField> fields = new LinkedHashSet<>();
-    private SequencedSet<OrFields> requiredFields = new LinkedHashSet<>();
+    private boolean hasWarnings = false;
 
     public BibEntryTypeBuilder withType(EntryType type) {
         this.type = type;
@@ -29,8 +36,14 @@ public class BibEntryTypeBuilder {
     }
 
     public BibEntryTypeBuilder withImportantFields(SequencedSet<Field> newFields) {
-        this.fields = Streams.concat(fields.stream(), newFields.stream().map(field -> new BibField(field, FieldPriority.IMPORTANT)))
-                             .collect(Collectors.toCollection(LinkedHashSet::new));
+        List<Field> containedFields = containedInSeenFields(newFields);
+        if (!containedFields.isEmpty()) {
+            LOGGER.warn("Fields {} already added to type {}.", containedFields, type.getDisplayName());
+            hasWarnings = true;
+        }
+        this.seenFields.addAll(newFields);
+        this.optionalFields = Streams.concat(optionalFields.stream(), newFields.stream().map(field -> new BibField(field, FieldPriority.IMPORTANT)))
+                                     .collect(Collectors.toCollection(LinkedHashSet::new));
         return this;
     }
 
@@ -39,8 +52,14 @@ public class BibEntryTypeBuilder {
     }
 
     public BibEntryTypeBuilder withDetailFields(SequencedCollection<Field> newFields) {
-        this.fields = Streams.concat(fields.stream(), newFields.stream().map(field -> new BibField(field, FieldPriority.DETAIL)))
-                             .collect(Collectors.toCollection(LinkedHashSet::new));
+        List<Field> containedFields = containedInSeenFields(newFields);
+        if (!containedFields.isEmpty()) {
+            LOGGER.warn("Fields {} already added to type {}.", containedFields, type.getDisplayName());
+            hasWarnings = true;
+        }
+        this.seenFields.addAll(newFields);
+        this.optionalFields = Streams.concat(optionalFields.stream(), newFields.stream().map(field -> new BibField(field, FieldPriority.DETAIL)))
+                                     .collect(Collectors.toCollection(LinkedHashSet::new));
         return this;
     }
 
@@ -49,33 +68,39 @@ public class BibEntryTypeBuilder {
     }
 
     public BibEntryTypeBuilder withRequiredFields(SequencedSet<OrFields> requiredFields) {
-        this.requiredFields = requiredFields;
+        return addRequiredFields(requiredFields);
+    }
+
+    public BibEntryTypeBuilder addRequiredFields(SequencedSet<OrFields> requiredFields) {
+        Set<Field> fieldsToAdd = requiredFields.stream().map(OrFields::getFields).flatMap(Set::stream).collect(Collectors.toSet());
+        List<Field> containedFields = containedInSeenFields(fieldsToAdd);
+        if (!containedFields.isEmpty()) {
+            LOGGER.warn("Fields {} already added to type {}.", containedFields, type.getDisplayName());
+            hasWarnings = true;
+        }
+        this.seenFields.addAll(fieldsToAdd);
+        this.requiredFields.addAll(requiredFields);
         return this;
     }
 
     public BibEntryTypeBuilder addRequiredFields(OrFields... requiredFields) {
-        this.requiredFields.addAll(Arrays.asList(requiredFields));
-        return this;
+        return addRequiredFields(new LinkedHashSet<>(List.of(requiredFields)));
     }
 
     public BibEntryTypeBuilder addRequiredFields(Field... requiredFields) {
-        this.requiredFields.addAll(Arrays.stream(requiredFields).map(OrFields::new).toList());
-        return this;
+        return addRequiredFields(Arrays.stream(requiredFields).map(OrFields::new).collect(Collectors.toCollection(LinkedHashSet::new)));
     }
 
     public BibEntryTypeBuilder withRequiredFields(Field... requiredFields) {
-        this.requiredFields = Arrays.stream(requiredFields).map(OrFields::new).collect(Collectors.toCollection(LinkedHashSet::new));
-        return this;
+        return addRequiredFields(requiredFields);
     }
 
     public BibEntryTypeBuilder withRequiredFields(OrFields first, Field... requiredFields) {
-        this.requiredFields = Stream.concat(Stream.of(first), Arrays.stream(requiredFields).map(OrFields::new)).collect(Collectors.toCollection(LinkedHashSet::new));
-        return this;
+        return addRequiredFields(Stream.concat(Stream.of(first), Arrays.stream(requiredFields).map(OrFields::new)).collect(Collectors.toCollection(LinkedHashSet::new)));
     }
 
     public BibEntryTypeBuilder withRequiredFields(SequencedSet<OrFields> first, Field... requiredFields) {
-        this.requiredFields = Stream.concat(first.stream(), Arrays.stream(requiredFields).map(OrFields::new)).collect(Collectors.toCollection(LinkedHashSet::new));
-        return this;
+        return addRequiredFields(Stream.concat(first.stream(), Arrays.stream(requiredFields).map(OrFields::new)).collect(Collectors.toCollection(LinkedHashSet::new)));
     }
 
     public BibEntryType build() {
@@ -84,7 +109,15 @@ public class BibEntryTypeBuilder {
                 .map(OrFields::getFields)
                 .flatMap(Set::stream)
                 .map(field -> new BibField(field, FieldPriority.IMPORTANT));
-        SequencedSet<BibField> allFields = Stream.concat(fields.stream(), requiredAsImportant).collect(Collectors.toCollection(LinkedHashSet::new));
+        SequencedSet<BibField> allFields = Stream.concat(optionalFields.stream(), requiredAsImportant).collect(Collectors.toCollection(LinkedHashSet::new));
         return new BibEntryType(type, allFields, requiredFields);
+    }
+
+    public boolean hasWarnings() {
+        return hasWarnings;
+    }
+
+    private List<Field> containedInSeenFields(Collection<Field> fields) {
+        return fields.stream().filter(seenFields::contains).toList();
     }
 }
