@@ -1,8 +1,8 @@
 package org.jabref.logic.util;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.Optional;
 
 import org.jabref.model.entry.BibEntry;
@@ -22,7 +22,7 @@ class ExternalLinkCreatorTest {
     private boolean urlIsValid(String url) {
         try {
             // This will throw on non-compliance to RFC2396.
-            new URL(url).toURI();
+            URI.create(url).toURL().toURI();
             return true;
         } catch (MalformedURLException | URISyntaxException e) {
             return false;
@@ -51,6 +51,6 @@ class ExternalLinkCreatorTest {
         BibEntry entry = new BibEntry().withField(StandardField.TITLE, "JabRef bibliography management");
         Optional<String> url = getShortScienceSearchURL(entry);
         // Expected behaviour is to link to the search results page, /internalsearch
-        assertEquals(Optional.of("https://www.shortscience.org/internalsearch?q=JabRef+bibliography+management"), url);
+        assertEquals(Optional.of("https://www.shortscience.org/internalsearch?q=JabRef%20bibliography%20management"), url);
     }
 }
